--- a/package.json
+++ b/package.json
@@ -16,5 +16,20 @@
   "bugs": {
     "url": "https://github.com/rriegel/project-purple-cow/issues"
   },
-  "homepage": "https://github.com/rriegel/project-purple-cow#readme"
+  "homepage": "https://github.com/rriegel/project-purple-cow#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "jquery": "^3.6.0",
+    "node": "^16.4.0",
+    "parcel": "^2.0.0-nightly.746",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
+  }
 }
