--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "project-purple-cow",
   "version": "1.0.0",
   "description": "Trial project for Fearless Tech Baltimore",
-  "main": "server/index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode development --watch",
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -18,18 +19,25 @@
   },
   "homepage": "https://github.com/rriegel/project-purple-cow#readme",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "node": "^16.4.0",
-    "parcel": "^2.0.0-nightly.746",
+    "nodemon": "^2.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "webpack": "^5.41.1",
+    "webpack-cli": "^4.7.2"
   }
 }
