--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/rriegel/project-purple-cow#readme",
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.14.5",
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "node": "^16.4.0",
