Created styles.css sheet and linked it to the index.html file Added some basic styling Adjusted the method in which the hits count was rendering to a ternary operator

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "build": "webpack --mode development --watch",
-    "start": "nodemon"
+    "start-dev": "nodemon",
+    "start": "webpack --mode development && nodemon"
   },
   "repository": {
     "type": "git",
